Fix maths symbol layout issues

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -149,7 +149,6 @@ p code {
 #content img {
     max-width: 100%;
     margin: 0 auto;
-    display: block;
 }
 
 h1,
